# Gimle-Palace

./: .env.example  .gitignore  .gitmodules  .shellcheckrc  .yamllint  CLAUDE.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
services/palace-mcp/: .env.example  Dockerfile  README.md  pyproject.toml
services/palace-mcp/scip_emit_swift/: .gitignore  Package.resolved  Package.swift  README.md
services/palace-mcp/scip_emit_swift/scripts/: build_scip.py
services/palace-mcp/scripts/: _clone_kits.py  _mcp_client.py  backfill_language_profile.cypher  diff-manifest-vs-package-resolved.py  entrypoint.sh  n1a_minigap_spike.py  regen-uw-ios-scip.sh  register-uw-ios-bundle.sh  smoke_code_ownership.py  smoke_dependency_surface.py  smoke_git_history.py  smoke_uw_ios_bundle.py  uw-ios-bundle-manifest.json
services/palace-mcp/src/palace_mcp/: cli.py  code_composite.py  code_router.py  config.py  errors.py  graphiti_client.py  graphiti_runtime.py  main.py  mcp_server.py  project_analyze.py
services/palace-mcp/tests/: test_code_composite.py  test_code_router.py  test_config.py  test_gim75_unit.py  test_graphiti_client.py  test_handle_tool_error.py  test_health.py  test_healthz.py  test_imports.py  test_lookup_response_n1b_compat.py  test_lookup_response_stability.py  test_mcp_bundle_tools.py  test_mcp_health_tool.py  test_mcp_server.py  test_mcp_server_project_analyze.py  test_mcp_server_register_project.py  test_no_raw_cypher.py  test_project_analyze.py  test_project_analyze_cli.py  test_startup_hardening.py  test_version.py
services/palace-mcp/tests/audit/: test_arch_layer_template.py  test_bundle_mode_discovery.py  test_dependency_surface_template.py  test_discovery_status_taxonomy.py  test_executive_summary_library_only.py  test_renderer_coverage_count_mismatch_fails.py  test_renderer_no_global_severity_sort.py  test_renderer_pinned_ordering.py  test_renderer_profile_coverage_appendix.py  test_renderer_source_column.py  test_renderer_source_distribution.py  test_renderer_status_sections.py  test_run_preserves_fetch_failed_path.py  test_run_uses_status_taxonomy.py  test_smoke_source_context_e2e.py  test_smoke_taxonomy_e2e.py  test_testability_di_template.py
services/palace-mcp/tests/cli/: test_audit_cli_unit.py
services/palace-mcp/tests/code/: test_composite_find_cross_module_contracts.py  test_composite_find_dead_symbols.py  test_composite_find_public_api.py
services/palace-mcp/tests/code_composite/: test_cm_contract.py  test_find_references_bundle.py
services/palace-mcp/tests/code_graph/: conftest.py  test_code_graph_integration.py
services/palace-mcp/tests/extractors/: test_hotspot_prerequisite_check.py  test_hotspot_zero_scan_invariants.py  test_profiles.py
services/palace-mcp/tests/fixtures/: lookup_issue_snapshot_n1b_compat.json
services/palace-mcp/tests/git/: conftest.py  test_cap_enforcement.py  test_command.py  test_path_resolver.py  test_path_resolver_parent_mount.py  test_tool_blame.py  test_tool_diff.py  test_tool_log.py  test_tool_ls_tree.py  test_tool_show.py  test_valid_ref.py
services/palace-mcp/tests/ingest/: test_builders.py  test_bundle_state.py  test_paperclip_client.py  test_run_extractor_bundle.py  test_runner.py  test_transform.py  test_upsert.py
services/palace-mcp/tests/integration/: conftest.py  hotspot_wire_support.py  neo4j_runtime_support.py  test_audit_composite_e2e.py  test_decide_lookup_roundtrip.py  test_find_hotspots_tool.py  test_find_owners_mcp_wire.py  test_gim75_integration.py  test_group_id_ingest.py  test_ingest_run_unification.py  test_list_functions_tool.py  test_manage_adr_wire.py  test_mcp_bundle_wire.py  test_mcp_version_skew_wire.py  test_mcp_wire_pattern.py  test_n1b_multi_project.py  test_palace_code_test_impact_wire.py  (+5 more)
services/watchdog/: .coverage  .coveragerc  README.md  pyproject.toml
services/watchdog/tests/: COVERAGE.md  _factories.py  conftest.py  test_actions.py  test_cli.py  test_cohort_fixture_schema.py  test_comment_registry.py  test_config.py  test_daemon.py  test_detection.py  test_detection_semantic.py  test_integration.py  test_list_companies.py  test_logger.py  test_models.py  test_modes.py  test_paperclip.py  test_phase_d_resolver_integration.py  test_posture_log.py  test_role_taxonomy.py  test_service.py  test_state.py
(+1371 files in other folders)
