[project]
name = "palace-mcp"
version = "0.1.0"
description = "Palace MCP Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "mcp>=1.6",
    "neo4j>=5.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.28.0",
    "python-json-logger>=2.0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/palace_mcp"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "mcp[cli]>=1.6",
    "testcontainers[neo4j]>=4.14.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
strict = true
python_version = "3.12"
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
files = ["src"]
plugins = ["pydantic.mypy"]
