[project]
name = "palace-mcp"
version = "0.1.0"
description = "Palace MCP Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "graphiti-core==0.28.2",
    "mcp>=1.6",
    "neo4j>=5.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.28.0",
    "python-json-logger>=2.0.7",
    "tantivy>=0.25.1",
    "protobuf>=4.25",
    "pycryptodome>=3.20",
    "packaging>=24.0",
    "pygit2>=1.15,<2.0",
    "lizard>=1.17.20,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/palace_mcp"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "mcp[cli]>=1.6",
    "testcontainers[neo4j]>=4.14.2",
    "respx>=0.21",
    # slither-analyzer is regen-only (fixture generation); install manually:
    #   pip install slither-analyzer>=0.11.5
    # NOT listed here — cbor2 transitive dep requires Rust, breaks CI uv sync.
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring external services (Neo4j, running MCP server)",
    "slow: tests >30s (excluded from CI; run nightly or manually on iMac)",
    "wire: MCP wire-contract tests requiring running palace-mcp transport",
    "requires_scip_typescript: tests requiring ts-mini-project/index.scip fixture",
    "requires_scip_python: tests requiring py-mini-project/index.scip fixture",
    "requires_scip_java: tests requiring a real scip-java-generated index.scip (not synthetic)",
    "requires_scip_solidity: tests requiring oz-v5-mini/index.scip fixture",
    "requires_scip_uw_android: tests requiring uw-android-mini-project/index.scip fixture (real Android: Compose + Room/KSP + multi-module)",
    "requires_scip_uw_ios: tests requiring uw-ios-mini-project/scip/index.scip fixture (real Swift emitter output)",
    "requires_slither: tests requiring slither-analyzer installed and functional",
]

[tool.mypy]
strict = true
python_version = "3.12"
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
files = ["src"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tantivy", "scip.*", "google.protobuf.*", "slither.*"]
ignore_missing_imports = true
