[project]
name = "gimle-watchdog"
version = "0.1.0"
description = "Gimle Palace agent watchdog — respawn + idle-hang recovery daemon (GIM-63)"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27,<1.0",
    "pyyaml>=6.0,<7.0",
]


[project.scripts]
gimle-watchdog = "gimle_watchdog.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gimle_watchdog"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[dependency-groups]
dev = [
    "fastapi>=0.136.1",
    "freezegun>=1.5.5",
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
    "types-pyyaml>=6.0.12.20260408",
    "uvicorn>=0.46.0",
]
